--- a/package.json
+++ b/package.json
@@ -8,9 +8,24 @@
     "export": "next export"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
     "cypress": "^10.0.3",
-    "next": "^12.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "eslint-config-next": "^14.0.1",
+    "font-awesome": "^4.7.0",
+    "formik": "^2.4.5",
+    "isomorphic-unfetch": "^4.0.2",
+    "next": "^14.0.1",
+    "next-intl": "^2.22.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-particles": "^2.12.2",
+    "sass": "^1.69.5",
+    "tsparticles": "^2.12.0",
+    "unfetch": "^5.0.0"
   }
 }
